# boost_spirit-CMake

./: CMakeLists.txt
Example/: CMakeLists.txt  Main.cpp
